2012-04-17  Jer Noble  <jer.noble@apple.com>

        Exiting full screen video brings the wrong Safari window to the foreground
        https://bugs.webkit.org/show_bug.cgi?id=83936

        Reviewed by Adele Peterson.

        Tell the original webView's window to makeKeyAndOrderFront once the exit
        animation completes.

        * UIProcess/mac/WKFullScreenWindowController.mm:
        (-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):

2012-04-17  Michał Pakuła vel Rutka  <m.pakula@samsung.com>

        [EFL][WK2] Fix build break when FULLSCREEN_API is enabled.
        https://bugs.webkit.org/show_bug.cgi?id=84142

        Reviewed by Martin Robinson.

        Create a cpp file needed to build EFL port with FULLSCREEN_API.

        * PlatformEfl.cmake: Added WebFullScreenManagerProxyEfl.cpp to build list.
        * UIProcess/WebFullScreenManagerProxy.h:
        (WebKit):
        * UIProcess/efl/WebFullScreenManagerProxyEfl.cpp: Added.
        (WebKit):
        (WebKit::WebFullScreenManagerProxy::invalidate):
        (WebKit::WebFullScreenManagerProxy::close):
        (WebKit::WebFullScreenManagerProxy::isFullScreen):
        (WebKit::WebFullScreenManagerProxy::enterFullScreen):
        (WebKit::WebFullScreenManagerProxy::exitFullScreen):
        (WebKit::WebFullScreenManagerProxy::beganEnterFullScreen):
        (WebKit::WebFullScreenManagerProxy::beganExitFullScreen):

2012-04-17  Andras Becsi  <andras.becsi@nokia.com>

        [Qt][WK2] Refactor the gesture recognizers
        https://bugs.webkit.org/show_bug.cgi?id=83044

        Reviewed by Kenneth Rohde Christiansen and Simon Hausmann.

        This patch implements a simple decision tree in the web page event handler
        on the basis of how many active touch points the current touch event has.

        Active touch points are pressed, moved or stationary and the number of these
        fully determine which gesture recognizer should be updated, cancelled or
        finished.
